fixed order history overflow

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -17,5 +17,4 @@
 
 .order-history {
   max-height: 416px;
-  overflow-y: auto;
 }
