--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,7 +22,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: #fff;
   z-index: -50;
